--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         </div>
     </section>
     <section id="bisnis" class="content-section">
-        
+        <div class="container"></div>
     </section>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
