section bisnis row warning

--- a/index.html
+++ b/index.html
@@ -391,8 +391,31 @@
             </div>
         </div>
     </section>
-    <section id="bisnis" class="content-section">
-        <div class="container"></div>
+    <section id="bisnis" class="content-section bg-soft-green">
+        <div class="container">
+            <div class="row text-center">
+                <h2 class="title-section text-center mb-4">
+                    <span class="text-dark">Peluang Bisnis</span>
+                    <span class="text-green"> Sabun Leafhea</span>
+                </h2>
+            </div>
+            <div class="row bg-green align-items-center py-3">
+                <div class="col-lg-3 col-md-5 col-12">
+                    <div class="wrapp-image text-center">
+                        <img src="./img/warning.png" alt="Perhatian">
+                    </div>
+                </div>
+                <div class="col-lg-9 col-md-7 col-12 text-light">
+                    <h3 class="sub-title-section mb-3">
+                        Perhatian!
+                    </h3>
+                    <p>Jika Anda Mau Penghasilan 3 Juta Perhari Dari Bisnis Modal 200ribuan, maka Info Terpenting ini Perlu Anda Tahu.</p>
+                    <p>Leafhea Peluang Bisnis Legal & Jangka Panjang</p>
+                    <p>Stop Buang-buang Waktu menjalankan bisnis yang tidak jelas. Saatnya memulai dengan perusahaan Network Marketing yang siap jangka panjang dan menjanjikan.</p>
+                    <p class="mb-0">Leafhea telah terdaftar sebagai perusahaan penjualan langsung yang resmi di Indonesia.</p>                    
+                </div>
+            </div>
+        </div>
     </section>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
