--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <span class="text-green"> Sabun Leafhea</span>
                 </h2>
             </div>
-            <div class="row bg-green align-items-center py-3">
+            <div class="row bg-green align-items-center py-4 mb-5">
                 <div class="col-lg-3 col-md-5 col-12">
                     <div class="wrapp-image text-center">
                         <img src="./img/warning.png" alt="Perhatian">
@@ -413,6 +413,29 @@
                     <p>Leafhea Peluang Bisnis Legal & Jangka Panjang</p>
                     <p>Stop Buang-buang Waktu menjalankan bisnis yang tidak jelas. Saatnya memulai dengan perusahaan Network Marketing yang siap jangka panjang dan menjanjikan.</p>
                     <p class="mb-0">Leafhea telah terdaftar sebagai perusahaan penjualan langsung yang resmi di Indonesia.</p>                    
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-6 col-12">
+                    <div class="wrapp-image text-center mb-md-0 mb-4">
+                        <img src="./img/Legalitas-Ap2LI-Leafhea.gif" class="w-100" alt="Perhatian">
+                    </div>
+                </div>
+                <div class="col-md-6 col-12">
+                    <div class="card bg-lite-green">
+                        <div class="card-content">
+                            <h3 class="sub-title-section mb-3">
+                                Legalitas Perusahaan
+                            </h3>
+                            <ul>
+                                <li>No AHU -0059604. AH.01.01.TAHUN 2020</li>
+                                <li>NIB : 0243010181434, KBLI : 47999</li>
+                                <li>No SIUPL : 210/SIPT/SIUPL/12/2020</li>
+                                <li>ANGGOTA AP2LI : 137/AP2LI/ DN/XII/2020</li>
+                                <li>PRODUK BPOM NA18200500874</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
