row inikah anda saat ini & row dan taukah anda

--- a/index.html
+++ b/index.html
@@ -440,6 +440,94 @@
             </div>
         </div>
     </section>
+    <section class="content-section">
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-md-9">
+                    <div class="card custom-card p-0">
+                        <div class="card-title bg-green p-3">
+                            <h2 class="title-section text-center mb-0">
+                                <span class="text-light">Inikah Anda Saat ini???</span>
+                            </h2>
+                        </div>
+                        <div class="card-content bg-soft-green">
+                            <div class="w-750">
+                                <ul>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Ingin Penghasilan Sendiri Yang Mudah</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Bekerja Dari Rumah Tanpa Mengganggu Pekerjaan Utama</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Bisa Menghasilkan Meskipun Hanya Lewat Online (Menggunakan Smartphone)</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Ingin Bisnis Mudah Dengan Modal Kecil</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Ingin Bisnis Yang Anti Resiko</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Ingin Bisnis Dengan Produk Laris & Mudah Dijual</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Ingin Bisnis Yang Jangka Panjang & Legalitas Lengkap</span>
+                                    </li>
+                                    <li class="green-check text-16">
+                                        <i class="fas fa-check" aria-hidden="true"></i>
+                                        <span>Segera Ingin Mewujudkan Impian: Rumah Baru, Mobil Baru, Ibadah Haji, Biaya Pendidikan Anak, Membantu Orang Tua & Lainnya.</span>
+                                    </li>
+                                </ul>
+                                <p class="mt-4 mb-0">Apapun Itu, Solusinya Ada Di Bisnis Leafhea. Bisnis Mudah & Legal, Modal Kecil, Produk Laris Dan Anti Resiko.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center mb-5">
+                <div class="col-md-9">
+                    <div class="card custom-card p-0">
+                        <div class="card-title bg-green p-3">
+                            <h2 class="title-section text-center mb-0">
+                                <span class="text-light">Dan Tahukah Anda???</span>
+                            </h2>
+                        </div>
+                        <div class="card-content bg-soft-green">
+                            <div class="w-750">
+                                <p class="mb-4">Bisnis Leafhea Adalah Bisnis Yang Mudah Kerjanya… Sudah Banyak Yang Membuktikan Mendapatkan Penghasilan / Bonus Setiap Hari Di Bisnis ini. Intinya!!! Kamu Tinggal Join Dan Buktikan Sendiri.</p>
+                                <ol class="list-blurb">
+                                    <li>
+                                        <h3 class="sub-title-section">Modal Bisnis Kecil</h3>
+                                        <p>Untuk Memulai Bisnis Leafhea, Syaratnya Hanya 200.000,- Sudah Sekaligus Dapat 1 Kotak Sabun Leafhea isi 14 pcs, Senilai 280.000,-</p>
+                                    </li>
+                                    <li>
+                                        <h3 class="sub-title-section">Perusahaan Yang Legal</h3>
+                                        <p>Leafhea Didesain Menjadi Bisnis Yang Siap Jangka Panjang. Saat ini Leafhea Telah Terdaftar di AP2LI dan Sudah Mengantongi Ijin SIUPL.</p>
+                                    </li>
+                                    <li>
+                                        <h3 class="sub-title-section">Produk Bermanfaat & Diminati</h3>
+                                        <p>Produk Yang Berkwalitas Tidaklah Cukup, Tapi Dibutuhkan Produk Yang Sudah Pasti Repeat Order Tinggi. Sangat Tepat Memilih Sabun, Karena Semua Orang Menggunakan Sabun.</p>
+                                    </li>
+                                    <li>
+                                        <h3 class="sub-title-section">Menguntungkan & Tanpa Keahlian</h3>
+                                        <p>Marketing Plan Yang Menarik & Mudah Diduplikasi. Bisnis Leafhea Tidak Perlu Keahlian Bisnis, Siapapun Bisa Menjalankan Bisnisnya, Selama Ada Kemauan.</p>
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <!-- Bootstrap JS -->
