--- a/index.html
+++ b/index.html
@@ -394,10 +394,12 @@
     <section id="bisnis" class="content-section bg-soft-green">
         <div class="container">
             <div class="row text-center">
-                <h2 class="title-section text-center mb-4">
-                    <span class="text-dark">Peluang Bisnis</span>
-                    <span class="text-green"> Sabun Leafhea</span>
-                </h2>
+                <div class="col-12">
+                    <h2 class="title-section text-center mb-4">
+                        <span class="text-dark">Peluang Bisnis</span>
+                        <span class="text-green"> Sabun Leafhea</span>
+                    </h2>
+                </div>
             </div>
             <div class="row bg-green align-items-center py-4 mb-5">
                 <div class="col-lg-3 col-md-5 col-12">
@@ -522,6 +524,97 @@
                                     </li>
                                 </ol>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="paket-join" class="content-section bg-soft-green">
+        <div class="container">
+            <div class="row pb-4">
+                <div class="col-12">
+                    <h2 class="title-section text-center mb-4">
+                        <span class="text-dark">Paket Join </span>
+                        <span class="text-green">Leafhea</span>
+                    </h2>
+                    <h3 class="sub-title-section text-center mb-3">Setiap 1 Box Sabun Leafhea isi 16 Biji (20gr/biji).</h3>
+                </div>
+            </div>
+            <div class="row justify-content-center mb-4">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card custom-card price-card p-0">
+                        <div class="card-title bg-green p-3">
+                            <h3 class="sub-title-section text-center text-light mb-0">PEMULA</h3>
+                        </div>
+                        <div class="card-content bg-lite-green">
+                            <div class="d-flex align-items-start justify-content-center mb-5">
+                                <span class="price">Rp. 250</span>
+                                <span class="numeric">000</span>
+                            </div>
+                            
+                            <ul class="list-price">
+                                <li class="green-check text-16">
+                                    <i class="fas fa-user"></i>
+                                    <p>1 Hak Usaha Aktif</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-box"></i>
+                                    <p>Dapat 1 Box produk isi 16 pcs</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-money-bill-wave-alt"></i>
+                                    <p>Keuntungan Penjualan Langsung 70.000,-</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-money-bill-wave-alt"></i>
+                                    <p>Potensi Bonus 3 Juta Perhari</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-globe"></i>
+                                    <p>Gratis Website</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card custom-card price-card p-0">
+                        <div class="card-title bg-green p-3">
+                            <h3 class="sub-title-section text-center text-light mb-0">RESELLER</h3>
+                        </div>
+                        <div class="card-content bg-lite-green">
+                            <div class="d-flex align-items-start justify-content-center mb-5">
+                                <span class="price">Rp. 750</span>
+                                <span class="numeric">000</span>
+                            </div>
+                            
+                            <ul class="list-price">
+                                <li class="green-check text-16">
+                                    <i class="fas fa-user"></i>
+                                    <p>3 Hak Usaha Aktif</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-box"></i>
+                                    <p>Dapat 3 Box produk isi 48 pcs</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-money-bill-wave-alt"></i>
+                                    <p>Keuntungan Penjualan Langsung 210.000,-</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-money-bill-wave-alt"></i>
+                                    <p>Bonus Cash back 120.000,-</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-money-bill-wave-alt"></i>
+                                    <p>Potensi Bonus 9 Juta Perhari</p>
+                                </li>
+                                <li class="green-check text-16">
+                                    <i class="fas fa-globe"></i>
+                                    <p>Gratis Website</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
