--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6 col-12">
                     <div class="wrapp-image text-center mb-md-0 mb-4">
-                        <img src="./img/Legalitas-Ap2LI-Leafhea.gif" class="w-100" alt="Perhatian">
+                        <img src="./img/Legalitas-Ap2LI-Leafhea.gif" class="w-100" alt="legalitas">
                     </div>
                 </div>
                 <div class="col-md-6 col-12">
@@ -712,6 +712,72 @@
                                 <a href="https://leafhea.co.id/registrasi/" class="btn primary-btn text-bold borrad-0 mx-auto d-block">Daftar Sekarang</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="bonus-reseller" class="content-section">
+        <div class="container">
+            <div class="row pb-4">
+                <div class="col-12">
+                    <h2 class="title-section text-center mb-4">
+                        <span class="text-dark">Bonus Bagi </span>
+                        <span class="text-green">Reseller Leafhea</span>
+                    </h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-12 mb-4 d-md-block d-none">
+                    <div class="wrapp-image text-center mb-md-0 mb-4">
+                        <img src="./img/bonus-1.jpg" class="w-100" alt="Bonus Sponsor">
+                    </div>
+                </div>
+                <div class="col-md-6 col-12 mb-4 bg-green py-4">
+                    <h3 class="sub-title-section text-light px-3 mb-4">Bonus Sponsor Rp 50.000,-</h3>
+                    <p class="text-light px-3 mb-4">Bonus Diberikan Ketika Melakukan Belanja Ulang. Rp 50.000,- Bonus Setiap Belanja Per 200.000,- (1 kotak sabun leafhea isi 14 pcs). Contoh: Jika dalam sehari anda melakukan penjualan atau pembelian ke stokis untuk konsumen anda 10 Paket, Maka secara otomatis belanja anda terhitung: 10 Paket x bonus 50.000 = Total bonus sponsor anda Rp 500.000,-</p>
+                    <p class="text-light px-3">Keterangan:</p>
+                    <ul class="text-light px-3">
+                        <li>> Anda Rekrut Si A Bonus Rp. 50.000,-</li>
+                        <li>> Anda Rekrut Si A Bonus Rp. 50.000,-</li>
+                    </ul>
+                </div>
+                <div class="col-12 mb-4 d-md-none d-block">
+                    <div class="wrapp-image text-center mb-md-0 mb-4">
+                        <img src="./img/bonus-1.jpg" class="w-100" alt="Bonus Sponsor">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-12 mb-4 bg-green py-4">
+                    <h3 class="sub-title-section text-light px-3 mb-4">Bonus Pasangan Rp 20.000,-</h3>
+                    <p class="text-light px-3 mb-4">Di Bisnis Leafhea dikenal dengan istilah bineri sistem. Member bisa membangun jaringan reseller 2 kaki. Atau hanya membina 2 jalur saja. Ketika 2 jalur aktif, maka bonus pasangan bisa maksimal. 1 Pasang dibayar 20.000,- Maksimal 150 Pasang atau 3 juta per ID Member.</p>
+                    <p class="text-light px-3">Keterangan:</p>
+                    <ul class="text-light px-3">
+                        <li>> Setiap Pertumbuhan Jalur Si A & B Akan Dipasangkan.</li>
+                        <li>> Potensi 3 Juta Perhari atau 150 Pasang</li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-12 mb-4">
+                    <div class="wrapp-image text-center mb-md-0 mb-4">
+                        <img src="./img/bonus-2.jpg" class="w-100" alt="Bonus Sponsor">
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-4 justify-content-center">
+                <div class="col-12">
+                    <h2 class="title-section text-center mb-4">
+                        <span class="text-dark">Bonus </span>
+                        <span class="text-green">Reward</span>
+                    </h2>
+                </div>
+                <div class="col-md-9 col-12 text-center mb-4">
+                    <p>Poin Reward Diambil Dari Pengumpulan Poin Kiri dan Kakan. Poin Reward Diambil dari Jumlah RO. Contoh: Ketika ada 10 Paket RO kiri atau ada 10 Member yang masing-masing RO 1, Maka poin Reward anda jumlahnya 10.</p>
+                    <p>Catatan: RO adalah Repeat Order atau Belanja Ulang.</p>
+                </div>
+                <div class="col-md-9 col-12 text-center">
+                    <div class="wrapp-image text-center mb-md-0 mb-4">
+                        <img src="./img/bonus-3.gif" class="w-100" alt="Bonus Sponsor">
                     </div>
                 </div>
             </div>
