--- a/index.html
+++ b/index.html
@@ -783,6 +783,11 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="content-section">
+        <div class="container">
+            
+        </div>
+    </section>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <!-- Bootstrap JS -->
