section hubungi & section footer

--- a/index.html
+++ b/index.html
@@ -785,9 +785,40 @@
     </section>
     <section id="contact" class="content-section">
         <div class="container">
-            
+            <div class="row pb-4">
+                <div class="col-12">
+                    <h2 class="title-section text-center mb-4">
+                        <span class="text-dark">Hubungi </span>
+                        <span class="text-green">Kami</span>
+                    </h2>
+                </div>
+            </div>    
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="wrapp-image text-center mb-md-0 mb-4 me-4">
+                    <img src="./img/ashar.png" alt="legalitas">
+                </div>
+                <div class="text-hubungi">
+                    <p>Ashar : 08114418997</p>
+                    <a href="https://wa.me/6208114418997?text=Halo%20Admin,%20Saya%20Mau%20Join%20Bisnis%20Leafhea" class="btn primary-btn text-bold borrad-0 mx-auto d-block"><i class="fab fa-whatsapp"></i> Konsultasi</a>
+                </div>
+            </div>
         </div>
     </section>
+    <footer id="footer" class="content-footer bg-green">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-10 col-12">
+                    <span class="fs-4 logo">
+                        <img src="./img/logo-leafhea.png" alt="logo-leafhea">
+                    </span>
+                    <hr class="line-white">
+                    <p class="text-center text-light">
+                        Website Leafhea.co.id adalah Website Support Bisnis System Bisnis Leafhea, Bertujuan Untuk Membantu Grup Kami Membangun Bisnis Lewat Online. Website Pusat Leafhea adalah Leafhea.com
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <!-- Bootstrap JS -->
